added cuda check

--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -9,6 +9,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuda availablity is: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch import cuda\n",
+    "\n",
+    "print(\"Cuda availablity is:\", cuda.is_available())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
