--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(torch.cuda.memory_summary(device=None, abbreviated=False))"
+    "if torch.cuda.is_available():\n",
+    "    print(torch.cuda.memory_summary(device=None, abbreviated=False))"
    ]
   },
   {
@@ -266,7 +267,7 @@
     "    return running_loss / len(dataloader)\n",
     "\n",
     "# Train the model for the desired number of epochs\n",
-    "num_epochs = 10\n",
+    "num_epochs = 3\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    train_loss = train_epoch(model, train_loader, criterion, optimizer, device)\n",
@@ -779,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
