another cuda check

--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -268,6 +268,8 @@
     "\n",
     "# Train the model for the desired number of epochs\n",
     "num_epochs = 3\n",
+    "if torch.cuda.is_available():\n",
+    "    num_epochs = 50\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    train_loss = train_epoch(model, train_loader, criterion, optimizer, device)\n",
@@ -690,7 +692,8 @@
    "outputs": [],
    "source": [
     "torch.cuda.empty_cache()\n",
-    "print(torch.cuda.memory_summary(device=None, abbreviated=False))"
+    "if torch.cuda.is_available():\n",
+    "    print(torch.cuda.memory_summary(device=None, abbreviated=False))"
    ]
   },
   {
