changed 2nd epochs

--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -724,6 +724,8 @@
     "\n",
     "# Train the model\n",
     "num_epochs = 1\n",
+    "if torch.cuda.is_available():\n",
+    "    num_epochs = 50\n",
     "model.train()\n",
     "\n",
     "for epoch in range(num_epochs):\n",
