--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -269,7 +269,7 @@
     "# Train the model for the desired number of epochs\n",
     "num_epochs = 3\n",
     "if torch.cuda.is_available():\n",
-    "    num_epochs = 50\n",
+    "    num_epochs = 450\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    train_loss = train_epoch(model, train_loader, criterion, optimizer, device)\n",
@@ -454,7 +454,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import textattack\n",
     "from textattack.attack_recipes import TextFoolerJin2019\n",
     "from textattack.models.wrappers import HuggingFaceModelWrapper\n",
     "import pickle\n",
@@ -625,6 +624,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exit()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -725,7 +733,7 @@
     "# Train the model\n",
     "num_epochs = 1\n",
     "if torch.cuda.is_available():\n",
-    "    num_epochs = 50\n",
+    "    num_epochs = 300\n",
     "model.train()\n",
     "\n",
     "for epoch in range(num_epochs):\n",
