--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -445,6 +445,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Download resources needed for attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('universal_tagset')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Prepare the Model for TextFooler"
    ]
   },
