added import back

--- a/textfooler.ipynb
+++ b/textfooler.ipynb
@@ -475,6 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import textattack\n",
     "from textattack.attack_recipes import TextFoolerJin2019\n",
     "from textattack.models.wrappers import HuggingFaceModelWrapper\n",
     "import pickle\n",
